--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
       <h1 class="title">Niknaz Sadehvandi</h1>
       <p class="subtitle">Cybersecurity &amp; Identity Security Engineer</p>
       <p class="meta">
-        Charlotte, NC · <a href="mailto:sadvandniknaz0@gmail.com">sadvandniknaz0@gmail.com</a> · 
+       <p class="meta">
+  Matthews, NC · <a href="mailto:sadvandniknaz0@gmail.com">sadvandniknaz0@gmail.com</a> ·
+  <a href="https://linkedin.com/in/niknaz-sadehvandi" target="_blank" rel="noopener">LinkedIn</a>
+</p>
+
         <a href="https://linkedin.com/in/niknaz-sadehvandi" target="_blank" rel="noopener">LinkedIn</a>
       </p>
       <div class="cta">
