--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="https://linkedin.com/in/niknaz-sadehvandi" target="_blank" rel="noopener">LinkedIn</a>
       </p>
       <div class="cta">
-        <a class="btn" href="resume/Niknaz_Sadehvandi_Resume.pdf" target="_blank" rel="noopener">Download Resume (PDF)</a>
+        <a class="btn" href="./Niknaz_Sadehvandi_Resume.pdf?v=2" target="_blank" rel="noopener">Download Resume (PDF)</a>
         <a class="btn secondary" href="#contact">Contact</a>
       </div>
     </div>
