--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <section id="certs" class="container">
       <h2>Education &amp; Certifications</h2>
       <ul class="bullets">
-        <li>M.S. Cybersecurity Technology — UMGC (Expected Jun 2025)</li>
+        <li>M.S. Cybersecurity Technology — UMGC (Graduated Jul 2025, GPA 4.0, President’s List)</li> 
         <li>B.S. Information Technology — University of Phoenix</li>
         <li>IBM Python Basics · Stanford R Fundamentals · CompTIA Security+ (in progress)</li>
       </ul>
