--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <ul class="bullets">
         <li>M.S. Cybersecurity Technology — UMGC (Graduated Jul 2025, GPA 4.0, President’s List)</li> 
         <li>B.S. Information Technology — University of Phoenix</li>
-        <li>IBM Python Basics · Stanford R Fundamentals · CompTIA Security+ (in progress)</li>
+        <li>IBM Python Basics · Stanford R Fundamentals</li> 
       </ul>
     </section>
 
