--- a/index.html
+++ b/index.html
@@ -63,9 +63,13 @@
             <span>Sunset Auto Sales · 2023–Present · Charlotte, NC</span>
           </div>
           <ul>
-            <li>Investigate security alerts, analyze logs/PCAPs in Wireshark, and support containment/remediation.</li>
-            <li>Administer Microsoft 365 access, MFA, and least-privilege controls; document IR reports and KB articles.</li>
-            <li>Collaborate with vendors and leadership to strengthen detections mapped to MITRE ATT&amp;CK.</li>
+            <li>Conduct vulnerability assessments and incident management across Linux, Windows, and Mac environments.</li>
+            <li>Monitor and manage Splunk, Wireshark, and XDR tools, triaging phishing alerts and mitigating risks.</li>
+            <li>Support PCI audits, quarterly access reviews, and RBAC policy implementation.</li>
+            <li>Perform forensic investigations; deliver reports used for financial audits and compliance reviews.</li>
+            <li>Collaborate with leadership to update security policies, procedures, and baselines.</li>
+            <li>Develop proof-of-concept solutions for emerging security needs.</li>
+            <li>Contribute to disaster recovery and business continuity planning, ensuring resiliency.</li>
           </ul>
         </div>
         <div class="item">
@@ -74,8 +78,10 @@
             <span>Kafpoush · 2010–2015 · Germantown, MD</span>
           </div>
           <ul>
-            <li>Managed user provisioning/deprovisioning and access reviews; reduced manual errors via automated reporting.</li>
-            <li>Performed log reviews, escalated anomalies, and coordinated secure infrastructure improvements with vendors.</li>
+            <li>Administered IT systems, user accounts, and access controls for secure daily operations.</li>
+            <li>Conducted log reviews and internal security audits; escalated anomalies for investigation.</li>
+            <li>Automated reporting and optimized database management, reducing manual errors by 40%.</li>
+            <li>Partnered with vendors to implement infrastructure hardening and secure configurations.</li>
           </ul>
         </div>
       </div>
@@ -85,16 +91,13 @@
       <h2>Projects</h2>
       <div class="cards">
         <article class="card">
-          <h3>DFIR Lab — Disk &amp; Memory Forensics</h3>
-          <p>Performed Autopsy/FTK/Velociraptor triage, documented evidence handling, mapped findings to MITRE ATT&amp;CK.</p>
-        </article>
-        <article class="card">
-          <h3>Identity &amp; Access Control Audit</h3>
-          <p>Access reviews, SIEM log correlation (Splunk), and remediation recommendations aligned with NIST 800‑61.</p>
-        </article>
-        <article class="card">
-          <h3>Network Traffic &amp; Malware Analysis</h3>
-          <p>Analyzed PCAPs in Wireshark, built investigation timelines, and delivered executive-ready summaries.</p>
+          <h3>Digital Forensics &amp; Incident Response Lab — UMGC (Jan–Mar 2025)</h3>
+          <ul>
+            <li>Investigated Windows intrusion using FTK Imager, Autopsy, and Autoruns.</li>
+            <li>Identified persistence mechanisms, unauthorized accounts, and SSH-based exfiltration.</li>
+            <li>Analyzed IIS logs to confirm credential compromise and lateral movement.</li>
+            <li>Produced a remediation plan: system rebuild, IP blacklisting, and ongoing monitoring.</li>
+          </ul>
         </article>
       </div>
     </section>
@@ -102,16 +105,20 @@
     <section id="certs" class="container">
       <h2>Education &amp; Certifications</h2>
       <ul class="bullets">
-        <li>M.S. Cybersecurity Technology — UMGC (Graduated Jul 2025, GPA 4.0, President’s List)</li> 
-        <li>B.S. Information Technology — University of Phoenix</li>
-        <li>IBM Python Basics · Stanford R Fundamentals</li> 
+        <li>Master of Science in Cybersecurity Technology | University of Maryland Global Campus | 08/2024 – 07/2025 — President’s List, GPA 4.0</li>
+        <li>Bachelor of Science in Information Technology | University of Phoenix | 10/2022 – 02/2024 — Magna Cum Laude</li>
+      </ul>
+      <h3>Certifications</h3>
+      <ul class="bullets">
+        <li>Python Basics for Data Science — IBM, Jan 2024</li>
+        <li>R Programming Fundamentals — Stanford Online, Jan 2024</li>
       </ul>
     </section>
 
     <section id="contact" class="container">
       <h2>Contact</h2>
       <p>Email: <a href="mailto:sadvandniknaz0@gmail.com">sadvandniknaz0@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/niknaz-sadehvandi" target="_blank" rel="noopener">linkedin.com/in/niknaz-sadehvandi</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/niknaz-sadehvandi-a34179325" target="_blank" rel="noopener">linkedin.com/in/niknaz-sadehvandi-a34179325</a></p>
     </section>
   </main>
 
