--- a/index.html
+++ b/index.html
@@ -1,134 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Niknaz Sadehvandi — Cybersecurity Portfolio</title>
-  <meta name="description" content="Cybersecurity & Identity Security portfolio for Niknaz Sadehvandi: projects, experience, certifications, and contact."/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Niknaz Sadehvandi — Cybersecurity Analyst</title>
+
+  <!-- SEO -->
+  <meta name="title" content="Niknaz Sadehvandi — Cybersecurity Analyst" />
+  <meta name="description" content="Cybersecurity analyst specializing in vulnerability management, digital forensics, and incident response. Portfolio, projects, and resume." />
+  <meta name="robots" content="index,follow" />
+
+  <!-- Open Graph / Social -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Niknaz Sadehvandi — Cybersecurity Analyst" />
+  <meta property="og:description" content="Portfolio, projects, and resume." />
+  <meta property="og:url" content="https://niknaz-65.github.io/niknaz-portfolio/" />
+  <meta property="og:image" content="og-preview.png" /> <!-- Upload an image named og-preview.png to repo root (1200x630) -->
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- Favicon (optional) -->
+  <link rel="icon" href="favicon.ico" />
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+
+  <style>
+    :root{
+      --bg:#0b1220;           /* deep blue/black */
+      --surface:#0f172a;      /* slate-900 */
+      --card:#111827;         /* gray-900 */
+      --text:#e5e7eb;         /* gray-200 */
+      --muted:#9ca3af;        /* gray-400 */
+      --accent:#06b6d4;       /* cyan-500 */
+      --accent-2:#22d3ee;     /* cyan-400 */
+      --border:#1f2937;       /* gray-800 */
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;padding:0}
+    body{
+      font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+      background:linear-gradient(180deg,var(--bg),#0b1322 40%, #0d1830 100%);
+      color:var(--text);
+      line-height:1.6;
+      -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility;
+    }
+    a{color:var(--accent)}
+    .container{max-width:1100px;margin:0 auto;padding:24px}
+
+    /* Header / Hero */
+    header{
+      padding:64px 0 24px;
+    }
+    .hero{display:grid;gap:12px}
+    h1{font-size:clamp(28px,5vw,42px);margin:0 0 6px}
+    .subtitle{font-weight:500;color:var(--accent-2)}
+    .tagline{max-width:70ch;color:var(--muted)}
+
+    .cta{margin-top:18px;display:flex;gap:12px;flex-wrap:wrap}
+    .btn{display:inline-block;padding:12px 16px;border-radius:12px;border:1px solid var(--border);background:var(--surface);color:var(--text);text-decoration:none;font-weight:600}
+    .btn:hover{border-color:var(--accent);box-shadow:0 0 0 3px rgba(34,211,238,.15)}
+    .btn.secondary{background:transparent;color:var(--accent);border-color:var(--accent)}
+
+    /* Sections */
+    section{padding:28px 0;border-top:1px solid var(--border)}
+    section h2{margin:0 0 12px;font-size:clamp(20px,3.3vw,28px)}
+
+    /* Grid Cards */
+    .grid{display:grid;gap:16px;grid-template-columns:repeat(auto-fit,minmax(260px,1fr))}
+    .card{background:rgba(17,24,39,.6);border:1px solid var(--border);border-radius:16px;padding:16px}
+    .card h3{margin:0 0 6px;font-size:1.05rem}
+    .meta{color:var(--muted);font-size:.9rem}
+    .tags{display:flex;flex-wrap:wrap;gap:8px;margin:10px 0 0;padding:0;list-style:none}
+    .tag{border:1px solid var(--border);border-radius:999px;padding:2px 10px;font-size:.8rem;color:var(--muted)}
+
+    /* Lists */
+    .list{display:grid;gap:6px;margin:0;padding-left:18px}
+
+    /* Footer */
+    footer{padding:28px 0;color:var(--muted);text-align:center;border-top:1px solid var(--border)}
+
+    @media (prefers-color-scheme: light){
+      :root{ --bg:#f8fafc; --surface:#fff; --card:#fff; --text:#0f172a; --muted:#475569; --border:#e5e7eb; --accent:#0ea5e9; --accent-2:#0284c7; }
+      body{background:#f8fafc}
+      .card{background:#fff}
+    }
+  </style>
 </head>
 <body>
-  <header class="container header">
-    <div>
-      <h1 class="title">Niknaz Sadehvandi</h1>
-      <p class="subtitle">Cybersecurity &amp; Identity Security Engineer</p>
-      <p class="meta">
-       <p class="meta">
-  Matthews, NC · <a href="mailto:sadvandniknaz0@gmail.com">sadvandniknaz0@gmail.com</a> ·
-  <a href="https://linkedin.com/in/niknaz-sadehvandi" target="_blank" rel="noopener">LinkedIn</a>
-</p>
-
-        <a href="https://linkedin.com/in/niknaz-sadehvandi" target="_blank" rel="noopener">LinkedIn</a>
-      </p>
-      <div class="cta">
-        <a class="btn"
-   href="Niknaz_Sadehvandi_Resume.pdf"
-   download="Niknaz_Sadehvandi_Resume.pdf"
-   target="_blank"
-   rel="noopener"
->Download Resume (PDF)</a> 
-        <a class="btn secondary" href="#contact">Contact</a>
-      </div>
-    </div>
-  </header>
-
-  <main>
-    <section class="container grid">
-      <article class="card">
-        <h2>About</h2>
-        <p>
-          I’m a cybersecurity professional focused on identity security (IAM), incident response, and digital forensics.
-          I support enterprise environments across Microsoft 365 and cloud platforms, document clear remediation plans, and
-          translate complex technical findings into actionable outcomes for stakeholders.
-        </p>
-        <p class="updated">Last updated: September 25, 2025</p>
-      </article>
-
-      <article class="card">
-        <h2>Core Skills</h2>
-        <ul class="tags">
-          <li>IAM (AD, SAML, OAuth, OIDC)</li>
-          <li>PAM · MFA · IGA</li>
-          <li>Incident Response · DFIR</li>
-          <li>Wireshark · Splunk · EDR</li>
-          <li>AWS · Azure · GCP</li>
-          <li>Python · PowerShell · Bash</li>
-        </ul>
-      </article>
-    </section>
-
-    <section id="experience" class="container">
-      <h2>Experience</h2>
-      <div class="timeline">
-        <div class="item">
-          <div class="item-head">
-            <h3>Junior Cybersecurity Analyst</h3>
-            <span>Sunset Auto Sales · 2023–Present · Charlotte, NC</span>
-          </div>
-          <ul>
-            <li>Conduct vulnerability assessments and incident management across Linux, Windows, and Mac environments.</li>
-            <li>Monitor and manage Splunk, Wireshark, and XDR tools, triaging phishing alerts and mitigating risks.</li>
-            <li>Support PCI audits, quarterly access reviews, and RBAC policy implementation.</li>
-            <li>Perform forensic investigations; deliver reports used for financial audits and compliance reviews.</li>
-            <li>Collaborate with leadership to update security policies, procedures, and baselines.</li>
-            <li>Develop proof-of-concept solutions for emerging security needs.</li>
-            <li>Contribute to disaster recovery and business continuity planning, ensuring resiliency.</li>
-          </ul>
-        </div>
-        <div class="item">
-          <div class="item-head">
-            <h3>Administrator</h3>
-            <span>Kafpoush · 2010–2015 · Germantown, MD</span>
-          </div>
-          <ul>
-            <li>Administered IT systems, user accounts, and access controls for secure daily operations.</li>
-            <li>Conducted log reviews and internal security audits; escalated anomalies for investigation.</li>
-            <li>Automated reporting and optimized database management, reducing manual errors by 40%.</li>
-            <li>Partnered with vendors to implement infrastructure hardening and secure configurations.</li>
-          </ul>
+  <div class="container">
+    <header>
+      <div class="hero" role="banner">
+        <h1>Niknaz Sadehvandi</h1>
+        <div class="subtitle">Cybersecurity Analyst — Vulnerability Management · DFIR · Incident Response</div>
+        <p class="tagline">I help organizations reduce risk and respond quickly to threats by combining hands‑on analysis (Tenable, Splunk, Wireshark, FTK) with clear runbooks and stakeholder communication.</p>
+        <div class="cta">
+          <a class="btn" href="Niknaz_Sadehvandi_Resume.pdf" download="Niknaz_Sadehvandi_Resume.pdf" target="_blank" rel="noopener">Download Resume (PDF)</a>
+          <a class="btn secondary" href="#contact">Contact</a>
         </div>
       </div>
-    </section>
+    </header>
 
-    <section id="projects" class="container">
-      <h2>Projects</h2>
-      <div class="cards">
-        <article class="card">
-          <h3>Digital Forensics &amp; Incident Response Lab — UMGC (Jan–Mar 2025)</h3>
-          <ul>
-            <li>Investigated Windows intrusion using FTK Imager, Autopsy, and Autoruns.</li>
-            <li>Identified persistence mechanisms, unauthorized accounts, and SSH-based exfiltration.</li>
-            <li>Analyzed IIS logs to confirm credential compromise and lateral movement.</li>
-            <li>Produced a remediation plan: system rebuild, IP blacklisting, and ongoing monitoring.</li>
+    <main id="content">
+      <!-- Projects / Case Studies -->
+      <section id="projects" aria-labelledby="projects-title">
+        <h2 id="projects-title">Featured Projects</h2>
+        <div class="grid">
+          <article class="card" aria-labelledby="p1-title">
+            <h3 id="p1-title">Windows Intrusion Forensics</h3>
+            <p>Investigated a simulated breach using <strong>FTK Imager</strong>, <strong>Autopsy</strong>, and <strong>Autoruns</strong>; identified persistence, lateral movement, and SSH exfiltration. Delivered a remediation plan (rebuild, IP block, monitoring).</p>
+            <ul class="tags"><li class="tag">DFIR</li><li class="tag">Windows</li><li class="tag">Logs</li></ul>
+          </article>
+          <article class="card" aria-labelledby="p2-title">
+            <h3 id="p2-title">Phishing Response Playbook</h3>
+            <p>Standardized intake → analysis → user coaching; built templates for comms and tracked outcomes. Result: fewer repeat clickers in lab environment and faster resolution times.</p>
+            <ul class="tags"><li class="tag">XDR</li><li class="tag">IR</li><li class="tag">User Education</li></ul>
+          </article>
+          <article class="card" aria-labelledby="p3-title">
+            <h3 id="p3-title">Vulnerability Management Pipeline</h3>
+            <p>Integrated <strong>Tenable</strong> findings into <strong>Splunk</strong> dashboards; authored remediation runbooks; improved prioritization (asset criticality × exploitability) and reporting to leadership.</p>
+            <ul class="tags"><li class="tag">Tenable</li><li class="tag">Splunk</li><li class="tag">Risk</li></ul>
+          </article>
+        </div>
+      </section>
+
+      <!-- Skills Snapshot -->
+      <section id="skills" aria-labelledby="skills-title">
+        <h2 id="skills-title">Skills</h2>
+        <div class="card">
+          <ul class="list">
+            <li><strong>Security:</strong> Vulnerability Assessments, Incident Response, Digital Forensics, PCI</li>
+            <li><strong>Tools:</strong> Tenable, Splunk, Wireshark, FTK Imager, Autopsy, Autoruns, VirusTotal</li>
+            <li><strong>Platforms:</strong> Windows, Linux, Mac, AWS</li>
+            <li><strong>Programming:</strong> Python, Java, R</li>
           </ul>
-        </article>
-      </div>
-    </section>
+        </div>
+      </section>
 
-    <section id="certs" class="container">
-      <h2>Education &amp; Certifications</h2>
-      <ul class="bullets">
-        <li>Master of Science in Cybersecurity Technology | University of Maryland Global Campus | 08/2024 – 07/2025 — President’s List, GPA 4.0</li>
-        <li>Bachelor of Science in Information Technology | University of Phoenix | 10/2022 – 02/2024 — Magna Cum Laude</li>
-      </ul>
-      <h3>Certifications</h3>
-      <ul class="bullets">
-        <li>Python Basics for Data Science — IBM, Jan 2024</li>
-        <li>R Programming Fundamentals — Stanford Online, Jan 2024</li>
-      </ul>
-    </section>
+      <!-- Certifications -->
+      <section id="certs" aria-labelledby="certs-title">
+        <h2 id="certs-title">Certifications</h2>
+        <div class="grid">
+          <article class="card"><h3>Python Basics for Data Science</h3><div class="meta">IBM — Jan 2024</div></article>
+          <article class="card"><h3>R Programming Fundamentals</h3><div class="meta">Stanford Online — Jan 2024</div></article>
+        </div>
+      </section>
 
-    <section id="contact" class="container">
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:sadvandniknaz0@gmail.com">sadvandniknaz0@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/niknaz-sadehvandi-a34179325" target="_blank" rel="noopener">linkedin.com/in/niknaz-sadehvandi-a34179325</a></p>
-    </section>
-  </main>
+      <!-- Education (optional concise) -->
+      <section id="education" aria-labelledby="edu-title">
+        <h2 id="edu-title">Education</h2>
+        <div class="card">
+          <p><strong>M.S., Cybersecurity Technology</strong> — University of Maryland Global Campus (GPA 4.0, President’s List)</p>
+          <p><strong>B.S., Information Technology</strong> — University of Phoenix (Magna Cum Laude)</p>
+        </div>
+      </section>
 
-  <footer class="container footer">
-    <p>© 2025 Niknaz Sadehvandi • Built with GitHub Pages</p>
-  </footer>
+      <!-- Contact -->
+      <section id="contact" aria-labelledby="contact-title">
+        <h2 id="contact-title">Contact</h2>
+        <div class="card" style="text-align:center">
+          <p>
+            <a href="mailto:sadvandniknaz0@gmail.com">sadvandniknaz0@gmail.com</a>
+            &nbsp;·&nbsp;
+            <a href="https://www.linkedin.com/in/niknaz-sadehvandi-a34179325" target="_blank" rel="noopener">LinkedIn</a>
+            &nbsp;·&nbsp;
+            <a href="https://github.com/niknaz-65" target="_blank" rel="noopener">GitHub</a>
+          </p>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      © <span id="year"></span> Niknaz Sadehvandi · Matthews, NC
+    </footer>
+  </div>
+
+  <script>
+    // Set dynamic year in footer
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
