--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
   <style>
     /* Your styles here (keep the ones you already have) */
   </style>
-</head>
-
+<head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Niknaz Sadehvandi — Cybersecurity Analyst</title>
@@ -43,22 +42,31 @@
   <meta name="description" content="Cybersecurity analyst specializing in vulnerability management, digital forensics, and incident response. Portfolio, projects, and resume." />
   <meta name="robots" content="index,follow" />
 
-  <!-- Open Graph / Social -->
+  <!-- Open Graph / Social (LinkedIn, Twitter, etc.) -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Niknaz Sadehvandi — Cybersecurity Analyst" />
   <meta property="og:description" content="Portfolio, projects, and resume." />
   <meta property="og:url" content="https://niknaz-65.github.io/niknaz-portfolio/" />
-  <meta property="og:image" content="og-preview.png" /> <!-- Upload an image named og-preview.png to repo root (1200x630) -->
+  <meta property="og:image" content="og-preview.png" /> <!-- Upload og-preview.png (1200x630) to repo root -->
   <meta name="twitter:card" content="summary_large_image" />
 
-  <!-- Favicon (optional) -->
-  <link rel="icon" href="favicon.ico" />
+  <!-- Favicons -->
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="icon" href="favicon.ico">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
+  <!-- Styles -->
+  <style>
+    /* Keep your CSS variables + global styles here */
+  </style>
+</head>
   <style>
     :root{
       --bg:#0b1220;           /* deep blue/black */
