Revise portfolio content for IT Support focus
Updated the title and description in the HTML file to reflect a focus on IT Support and Cybersecurity projects. Modified various project descriptions and roles to emphasize IT Support skills and experiences.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Niknaz Sadehvandi — Portfolio</title>
+  <title>Niknaz Sadehvandi — IT Support & Cybersecurity Projects</title>
   <link rel="stylesheet" href="styles.css" />
-  <meta name="description" content="Portfolio of Niknaz Sadehvandi, Cybersecurity Analyst specializing in vulnerability management, DFIR, and incident response." />
+  <meta name="description" content="Portfolio of Niknaz Sadehvandi, IT Support and Helpdesk professional with hands-on cybersecurity projects in log analysis, digital forensics, and network scanning." />
   <style>
-    /* Minimal helpers in case styles.css is simple */
     body {font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; line-height: 1.55; color:#0f172a; margin:0; background:#fff;}
     .wrap {max-width: 940px; margin: 0 auto; padding: 32px 20px;}
     h1 {font-size: 40px; margin: 0 0 8px;}
@@ -31,13 +30,13 @@
   <main class="wrap">
     <header>
       <h1>Niknaz Sadehvandi</h1>
-      <h2>Cybersecurity Analyst | Vulnerability Management, DFIR, Incident Response</h2>
+      <h2>IT Support & Cybersecurity Projects</h2>
       <p class="lead">
-        I help organizations reduce risk and improve response by performing hands-on analysis with Tenable, Splunk, Wireshark, and FTK.
-        I build clear runbooks, streamline investigations, and communicate effectively with engineers, auditors, and leadership.
+        IT Support and Helpdesk professional with experience troubleshooting Windows systems, resolving user issues, and managing accounts.
+        I reinforce this with hands-on cybersecurity projects in log analysis, malware sandboxing, digital forensics, and network scanning using tools like Splunk, Wireshark, Nmap, FTK Imager, and Autopsy.
       </p>
       <div class="btnrow">
-        <a class="btn" href="Niknaz_Sadehvandi_Resume.pdf" target="_blank" rel="noopener">Download Resume (PDF)</a>
+        <a class="btn" href="Niknaz_Sadehvandi_IT_Support_Resume.pdf" target="_blank" rel="noopener">Download Resume (PDF)</a>
         <a class="btn" href="#contact">Contact</a>
       </div>
     </header>
@@ -46,34 +45,36 @@
       <h3>Featured Projects</h3>
       <div class="grid">
         <article class="card">
-          <h4>Windows Intrusion Forensics</h4>
+          <h4>Windows Intrusion Forensics (Lab Project)</h4>
           <p>
-            Investigated a simulated breach with FTK Imager, Autopsy, and Autoruns; identified persistence, lateral movement, and SSH exfiltration.
-            Delivered a remediation plan covering system rebuild, IP blocking, and monitoring.
+            Analyzed a Windows image using FTK Imager, Autopsy, and Autoruns to identify persistence mechanisms,
+            suspicious processes, and potential SSH-based exfiltration. Documented findings and drafted a basic remediation plan,
+            including system rebuild and IP/domain blocking.
           </p>
           <div class="tags">
-            <span class="tag">DFIR</span><span class="tag">Windows</span><span class="tag">Logs</span>
+            <span class="tag">DFIR (Lab)</span><span class="tag">Windows</span><span class="tag">Logs</span>
           </div>
         </article>
 
         <article class="card">
-          <h4>Phishing Response Playbook</h4>
+          <h4>Phishing & Email Analysis (Project)</h4>
           <p>
-            Standardized intake, analysis, and user coaching; created communication templates and tracked outcomes.
-            Result: fewer repeat clickers and faster resolution times.
+            Processed sample phishing emails, inspected headers and URLs, and extracted indicators for reputation checks.
+            Created a simple response checklist and user guidance to reduce repeat clickers in a simulated environment.
           </p>
           <div class="tags">
-            <span class="tag">XDR</span><span class="tag">IR</span><span class="tag">User Education</span>
+            <span class="tag">Email Analysis</span><span class="tag">IR (Lab)</span><span class="tag">User Education</span>
           </div>
         </article>
 
         <article class="card">
-          <h4>Vulnerability Management Pipeline</h4>
+          <h4>Network Recon & Log Analysis Toolkit (Python)</h4>
           <p>
-            Integrated Tenable findings into Splunk dashboards; authored remediation runbooks; prioritized work by asset criticality and exploitability; improved executive reporting.
+            Built a Python script that automates Nmap scanning and produces HTML summaries of open ports and services.
+            Combined this with basic Splunk searches to visualize authentication patterns and detect anomalous login activity.
           </p>
           <div class="tags">
-            <span class="tag">Tenable</span><span class="tag">Splunk</span><span class="tag">Risk</span>
+            <span class="tag">Python</span><span class="tag">Nmap</span><span class="tag">Splunk (Lab)</span>
           </div>
         </article>
       </div>
@@ -82,14 +83,15 @@
     <section>
       <h3>Experience</h3>
       <div class="card">
-        <h4>Junior Cybersecurity Analyst — Sunset Auto Sales, Charlotte, NC</h4>
+        <h4>IT Support Technician — Sunset Auto Sales, Charlotte, NC</h4>
         <p><em>Mar 2020 – Present</em></p>
         <ul class="clean">
-          <li>Executed IT General Controls testing with strong SOX alignment and audit readiness.</li>
-          <li>Drove process improvements and corrective actions with high on-time resolution.</li>
-          <li>Streamlined documentation of testing procedures; reduced errors and improved efficiency.</li>
-          <li>Led vulnerability triage and incident response; shortened phishing triage time and lowered false positives.</li>
-          <li>Enhanced Splunk detections by integrating threat intel feeds.</li>
+          <li>Resolve hardware, software, and basic network issues across Windows workstations and user devices.</li>
+          <li>Perform password resets, access updates, and permission troubleshooting in line with internal policies.</li>
+          <li>Support onboarding/offboarding, account creation, and workstation setup for new and departing staff.</li>
+          <li>Maintain antivirus updates, carry out basic malware cleanup, and monitor endpoint health.</li>
+          <li>Assist with printer setup, workstation imaging, and connectivity issues.</li>
+          <li>Document issues and resolutions in an internal ticket workflow to support consistency and knowledge sharing.</li>
         </ul>
       </div>
     </section>
@@ -98,31 +100,33 @@
       <h3>Skills</h3>
       <div class="cols">
         <div class="card">
-          <strong>Security & Compliance</strong>
+          <strong>IT Support & Security Awareness</strong>
           <ul class="clean">
-            <li>IT General Controls, SOX, audits, corrective actions</li>
-            <li>Incident response, threat hunting, digital forensics</li>
-            <li>Risk management and documentation</li>
+            <li>Technical troubleshooting for Windows endpoints and user applications</li>
+            <li>Password resets, account management, and basic access control tasks</li>
+            <li>Security awareness reinforcement and safe system usage coaching</li>
           </ul>
         </div>
         <div class="card">
           <strong>Tools</strong>
           <ul class="clean">
-            <li>Tenable, Nessus, Splunk, Wireshark</li>
-            <li>FTK Imager, Autopsy, Autoruns, Nmap, VirusTotal</li>
+            <li>Wireshark, Nmap, Nessus (lab), Splunk (lab)</li>
+            <li>FTK Imager, Autopsy, Autoruns, VirusTotal</li>
           </ul>
         </div>
         <div class="card">
           <strong>Platforms</strong>
           <ul class="clean">
-            <li>Windows, Linux, Mac, Active Directory, Office 365</li>
-            <li>AWS; basic Azure</li>
+            <li>Windows, basic Linux</li>
+            <li>Active Directory (user and group management exposure)</li>
+            <li>Office 365; basic familiarity with cloud services (coursework)</li>
           </ul>
         </div>
         <div class="card">
-          <strong>Programming</strong>
+          <strong>Programming & Scripting</strong>
           <ul class="clean">
-            <li>Python, PowerShell, Bash, Java, R</li>
+            <li>Python and PowerShell (automation and parsing tasks)</li>
+            <li>Java and R (academic projects)</li>
           </ul>
         </div>
       </div>
@@ -131,16 +135,18 @@
     <section>
       <h3>Certifications</h3>
       <ul class="clean">
-        <li>Python Basics for Data Science — IBM, Jan 2024</li>
-        <li>R Programming Fundamentals — Stanford Online, Jan 2024</li>
+        <li>Python Basics for Data Science — IBM, 2024</li>
+        <li>R Programming Fundamentals — Stanford Online, 2024</li>
       </ul>
     </section>
 
     <section>
       <h3>Education</h3>
       <ul class="clean">
-        <li><strong>M.S. Cybersecurity Technology</strong>, University of Maryland Global Campus — GPA 4.0, President’s List</li>
+        <li><strong>M.S. Cybersecurity Technology</strong>, University of Maryland Global Campus — GPA 4.0</li>
         <li><strong>B.S. Information Technology</strong>, University of Phoenix — Magna Cum Laude</li>
+        <li><strong>A.A. Information Technology</strong>, Central Piedmont Community College</li>
+        <li><strong>A.S. Architectural Drawing</strong>, Islamic Azad University</li>
       </ul>
     </section>
 
